File Name: CHANGES

04/25/2012 FASP 0.7.0: Put external packages into different directories. 

04/21/2012 FASP 0.6.7: Remove the non-GPL ILU from ilu.f and make changes for "core" accordingly.

04/10/2012 FASP 0.6.5: Rename "examples" as "tutorial". Add the new "Todo" list.

04/09/2012 FASP 0.6.4: Fix some Doxygen format problems. 
                       Restructure test directory. Optimize FEM method for the Poisson. 
                       Add FEM for the Heat equation. 

03/20/2012 FASP 0.6.0: Fix more Doxygen format problems. Finish all *.c file, except *_omp.c.
                       Modify a few function names and variable names. 
                       Revise regression test and examples.

03/18/2012 FASP 0.5.9: Get rid of annoying warning in some OMP routines on MAC. 
                       Some changes to the test functions as well.

03/16/2012 FASP 0.5.8: Remove several functions specially designed for the Stokes problem.

03/13/2012 FASP 0.5.7: Fix more Doxygen format problems. Finish from io.c to message.c, not including *_omp.c. 

03/12/2012 FASP 0.5.6: Modify testfem and add AMG solver to solve the linear system.
                       Fix more Doxygen format problems. Finish from amg.c to io.c, not including *_omp.c.

03/10/2012 FASP 0.5.5: Fix hundreds of Doxygen warnings.

03/09/2012 FASP 0.5.4: Revise tree structure, README and Makefile's. Revise Doxygen for a few files. 

03/07/2012 FASP 0.5.3: Add new FDM 2D/3D test code.

03/07/2012 FASP 0.5.2: Add new FEM P1 test code.

03/06/2012 FASP 0.5.1: Bug fix: Several problems when compile on VS2008.

03/05/2012 FASP 0.5.0: Revise Makefile, README, and INPUT for the new restructured package. 

01/17/2012 FASP 0.4.5: Finish restructure serial version; fix bugs in BiCGstab; revise regression test.

01/05/2012 FASP 0.4.2: Add nonlinear AMLI-cycle.

12/14/2011 FASP 0.4.1: Start to restructure the code; start to add INT and REAL. 