@@ -62,10 +62,10 @@ FSRC += $(foreach DIR,$(SRCDIR),$(wildcard $(DIR)/*.f))
 FSRC += $(foreach DIR,$(SRCDIR),$(wildcard $(DIR)/*.f77))
 FSRC += $(foreach DIR,$(SRCDIR),$(wildcard $(DIR)/*.f90))
 FSRC += $(foreach DIR,$(SRCDIR),$(wildcard $(DIR)/*.f95))
-FSRC += $(foreach DIR,$(EXTDIR),$(wildcard $(DIR)/*.f))
 CSRC := $(foreach DIR,$(SRCDIR),$(wildcard $(DIR)/*.c))
 CSRC += $(foreach DIR,$(SRCDIR),$(wildcard $(DIR)/*.cc))
 CSRC += $(foreach DIR,$(SRCDIR),$(wildcard $(DIR)/*.cpp))
+FSRC += $(foreach DIR,$(EXTDIR),$(wildcard $(DIR)/*.f))
 CSRC += $(foreach DIR,$(EXTDIR),$(wildcard $(DIR)/*.c))
 #
 OBJSF := $(patsubst %.for,%.o,$(FSRC))
