@@ -2,5 +2,6 @@
 ||   NOTICE   ||
 ================
 
-This directory contains several open-source C and Fortran files which are from external 
-sources and they are NOT part of the FASP package.
+This directory contains several open-source C/C++ and Fortran files which are from 
+external sources and they are NOT part of the FASP package. It also contains a few
+interface subroutines for various other free and proprietary packages. 
